# urop-chopped-symbolic-execution

./: .directory  Description.txt  README.md  good_output.txt  updated_functions
Experiment/: cleangraphs.sh  printgraphs.sh
Experiment/assembly/: password.ll
Experiment/call-graph/: callgraph.dot
Experiment/call-graph/img/: .directory  callgraph.dot.ps
Experiment/cfg/: cfg.a1.dot  cfg.a2.dot  cfg.append_string.dot  cfg.check_password.dot  cfg.get_length.dot  cfg.main.dot
Experiment/cfg/img/: cfg.a1.dot.ps  cfg.a2.dot.ps  cfg.append_string.dot.ps  cfg.check_password.dot.ps  cfg.get_length.dot.ps  (+1 more)
Pass/: CMakeCache.txt  CMakeLists.txt  Instructions to build.txt  Makefile  cmake_install.cmake  run_chopper.py
Pass/ShortestPathPass/: CMakeLists.txt  ExtendedCGNode.cpp  ExtendedCGNode.h  GraphManager.cpp  GraphManager.h  Makefile  ShortestPathPass.cpp  cmake_install.cmake
Pass/SkipFunctionsPass/: CMakeLists.txt  Makefile  SkipFunctionsPass.cpp  cmake_install.cmake
Pass/bkp/: CMakeLists.txt  Steps to build pass.txt
Pass/src/: a.out  password.bc  password.c
ShortestPathPass/: ExtendedCGNode.cpp  GraphManager.cpp
diff/: diffs  getdiffs.sh
diff/diffanalyze/: diffanalyze.py
diff/findutils-diifs/: diffs
diff/python/: debug_fn_per_commit.txt  debug_others.txt  diffanalyze.py  example getdiffs inputs.txt  getdiffs.py  tests.py
diffanalyze/: diffanalyze.py  new_commit_output.txt
diffanalyze/tests/: test_other_extensions.py
old/bash/: diffs  updated_functions
old/python/: before_debug  before_refac_summary.txt  idontevenknow.txt  old_tests.py
(+1 files in other folders)
